[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/enemy_crystal_wall.res" type="SpriteFrames" id=2]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EnemyCrystalWall.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=4]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=5]
[ext_resource path="res://src/Effects/Textures/remains_purple.png" type="Texture" id=6]
[ext_resource path="res://src/Effects/Materials/ExplosionParticles.tres" type="Material" id=7]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDamage.gd" type="Script" id=8]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=9]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=10]
[ext_resource path="res://src/Sounds/Ice Break.wav" type="AudioStream" id=11]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=12]
[ext_resource path="res://src/Sounds/Trilobyte - Create Crystal.ogg" type="AudioStream" id=13]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BossDetector.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/strong_enemy_crystal_wall.res" type="SpriteFrames" id=15]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 17, 28 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 17, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 29.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 26.5 )

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=5]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 33.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 34, 33.5 )

[node name="EnemyCrystalWall" type="KinematicBody2D"]
z_index = -2
script = ExtResource( 3 )
max_health = 8.0
strong_sprites = ExtResource( 15 )

[node name="playerDetector_left" type="Area2D" parent="."]
position = Vector2( -24, 0 )
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="playerDetector_left"]
modulate = Color( 0.756863, 1, 0, 1 )
position = Vector2( 7, 4 )
shape = SubResource( 9 )

[node name="playerDetector_right" type="Area2D" parent="."]
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="playerDetector_right"]
modulate = Color( 0.756863, 1, 0, 1 )
position = Vector2( -7, 4 )
shape = SubResource( 10 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 10 )
z_index = 1
frames = ExtResource( 2 )
animation = "idle"

[node name="rigidBody2D" type="RigidBody2D" parent="."]
z_index = 5
collision_layer = 1024
collision_mask = 0
mode = 1

[node name="collisionShape2D" type="CollisionShape2D" parent="rigidBody2D"]
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )
disabled = true

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 1 )
active = false

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch/area2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 8 )

[node name="wallCheck_left" type="RayCast2D" parent="."]
position = Vector2( -11, 0 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 257

[node name="wallCheck_right" type="RayCast2D" parent="."]
position = Vector2( 11, 0 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 257

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )
disabled = true

[node name="explosion" type="Particles2D" parent="."]
material = SubResource( 4 )
z_index = 2
emitting = false
amount = 3
lifetime = 2.0
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = ExtResource( 7 )
texture = ExtResource( 4 )

[node name="remains" type="Particles2D" parent="."]
material = SubResource( 5 )
z_index = 2
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 8 )
bypass_hit_invulnerable = true

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 9 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 6 )

[node name="break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -6.832
max_distance = 600.0
bus = "SFX"
script = ExtResource( 12 )

[node name="appear" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -6.832
max_distance = 600.0
bus = "SFX"
script = ExtResource( 12 )

[node name="BossDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -29 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 14 )

[node name="collisionShape2D" type="CollisionShape2D" parent="BossDetector"]
position = Vector2( 0, 30.5 )
shape = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="zero_health" from="." to="." method="_on_zero_health"]
[connection signal="body_entered" from="playerDetector_left" to="." method="_on_playerDetector_left_body_entered"]
[connection signal="body_exited" from="playerDetector_left" to="." method="_on_playerDetector_left_body_exited"]
[connection signal="body_entered" from="playerDetector_right" to="." method="_on_playerDetector_right_body_entered"]
[connection signal="body_exited" from="playerDetector_right" to="." method="_on_playerDetector_right_body_exited"]
[connection signal="body_entered" from="BossDetector" to="BossDetector" method="_on_area2D_body_entered"]
[connection signal="boss_detected" from="BossDetector" to="." method="_on_zero_health"]
