[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Actors/Enemies/AI.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Modules/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDamage.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=4]
[ext_resource path="res://src/Sounds/LEMON_SHOT2.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Actors/Enemies/Servbomb/DropBomb.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Enemies/Servbomb/Bomb.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=8]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=9]
[ext_resource path="res://src/Actors/Enemies/Shared/QuickEnemyDeath.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Actors/Enemies/Servbomb/servbomb.res" type="SpriteFrames" id=11]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 21, 56.5 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 13.5, 15.5 )

[sub_resource type="RectangleShape2D" id=48]

[node name="Servbomb" type="KinematicBody2D" groups=["Enemies"]]
z_index = 3
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
max_health = 1.0

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 1 )
on_see_player = [ NodePath("../DropBomb") ]

[node name="vision" type="Area2D" parent="AI"]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="AI/vision"]
position = Vector2( 0, 56.5 )
shape = SubResource( 49 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 8 )
z_index = 1
frames = ExtResource( 11 )
animation = "idle"
frame = 9
playing = true
offset = Vector2( 0, -3 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -14 )
shape = SubResource( 50 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2, 2 )
rect = Rect2( -5, -5, 10, 10 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 48 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 3 )
max_freeze_hits = 1

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 9 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="EnemyDeath" parent="." instance=ExtResource( 10 )]

[node name="DropBomb" type="Node2D" parent="."]
script = ExtResource( 6 )
actions = [ "Event" ]
bomb = ExtResource( 7 )

[node name="shot_sound" type="AudioStreamPlayer2D" parent="DropBomb"]
stream = ExtResource( 5 )
volume_db = -12.079
pitch_scale = 2.0
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="DropBomb"]
position = Vector2( 0, -25 )
scale = Vector2( 2, 2 )
rect = Rect2( -5, -5, 10, 10 )

[connection signal="body_entered" from="AI/vision" to="AI" method="_on_vision_body_entered"]
[connection signal="body_exited" from="AI/vision" to="AI" method="_on_vision_body_exited"]
[connection signal="screen_entered" from="DropBomb/visibilityNotifier2D" to="DropBomb" method="_on_visibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="DropBomb/visibilityNotifier2D" to="DropBomb" method="_on_visibilityNotifier2D_screen_exited"]
